--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.2",
     "react": "^18.2.0",
